objects/Strategic_Deals__c.object
<CustomObject>
    <description>The goal is to have sales reps flag opportunities as Competitive, get a support team involved and create a solution to win the order.</description>
    <label>Strategic Deal</label>
    <nameField>
        <label>Strategic Deals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Competitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Strategic Deals</relationshipLabel>
        <relationshipName>Strategic_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_What_Price__c</fullName>
        <description>At What Price?</description>
        <inlineHelpText>Net And % Discount</inlineHelpText>
        <label>Price Needed To Win</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chance_Of_Winning__c</fullName>
        <description>What Is The Chance Of Winning At The Current Discount?</description>
        <label>Chance Of Winning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_We_The_Incumbent__c</fullName>
        <label>Are We The Incumbent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Discount_Quoted__c</fullName>
        <description>What Is The Current Discount Quoted?</description>
        <inlineHelpText>Net Amount Or % Discount</inlineHelpText>
        <label>Current Discount Quoted?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Competitor_Product__c</fullName>
        <description>What Competitor Product Are You Competing Against?</description>
        <label>Which Competitor Product?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Decision_Making_Criteria__c</fullName>
        <description>What Are The Primary Decision Making Criteria?</description>
        <label>Primary Decision-Making Criteria?</label>
        <type>TextArea</type>
    </fields>
</CustomObject>